initial overview shifts

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 
-        <header>
+        <!--<header>
             <nav class="pure-menu pure-menu-open pure-menu-horizontal pure-menu-blackbg">
                 <a href="#" class="pure-menu-heading">WebDesignTuts</a>
                 <ul>
@@ -36,7 +36,7 @@
                     <li><a href="#">Reports</a></li>
                 </ul>
             </nav>
-        </header>
+        </header>-->
         <section class="dashboard pure-g-r clearfix">
             <div class="pure-u-1 dashboard-piece dashboard-piece-redbg dashboard-piece-logo">
                 <h1>
@@ -143,12 +143,5 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
     </body>
 </html>
