--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="shortcut icon" href="http://asset.geosprocket.com/img/favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
         <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=fontawesome">
@@ -81,7 +81,7 @@
                 <div class="bar-vertical" style="height:70%;"></div>
             </div>
         </section>
-        <section class="dashboard pure-g-r clearfix">
+        <!--<section class="dashboard pure-g-r clearfix">
             <div class="pure-u-2-3 dashboard-piece dashboard-piece-graybg dashboard-piece-events">
                 <div class="dashboard-content">
                     <p class="dashboard-metric">
@@ -132,10 +132,10 @@
                     </p>
                 </div>
             </div>
-        </section>
-        <footer>
+        </section>-->
+        <!--<footer>
             &copy; 2013 Envato
-        </footer>
+        </footer>-->
         
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
