--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
 
 
-        <!--<header>
+        <header>
             <nav class="pure-menu pure-menu-open pure-menu-horizontal pure-menu-blackbg">
-                <a href="#" class="pure-menu-heading">WebDesignTuts</a>
+                <a href="#" class="pure-menu-heading">Country Teaser Maps</a>
                 <ul>
-                    <li class="pure-menu-selected"><a href="#">Dashboard</a></li>
+                    <!--<li class="pure-menu-selected"><a href="#">Dashboard</a></li>
                     <li><a href="#">Users</a></li>
-                    <li><a href="#">Email</a></li>
-                    <li><a href="#">Reports</a></li>
+                    <li><a href="#">Email</a></li>-->
+                    <li><a href="#">About</a></li>
                 </ul>
             </nav>
-        </header>-->
+        </header>
         <section class="dashboard pure-g-r clearfix">
             <div class="pure-u-1 dashboard-piece dashboard-piece-redbg dashboard-piece-logo">
                 <div id="map">
