--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 </div>
             </div>
         </section>-->
-        <!--<footer>
-            &copy; 2013 Envato
-        </footer>-->
+        <footer>
+            Geosprocket, 2013 CC-by-SA
+        </footer>
         
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
