--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script>
-            var map = L.mapbox.map('map', 'examples.map-zr0njcqy');
+            var map = L.mapbox.map('map', 'landplanner.map-ywbxvf7j');
 
             map.markerLayer.on('click', function(e) {
                 map.panTo(e.layer.getLatLng());
