--- a/index.html
+++ b/index.html
@@ -48,8 +48,18 @@
             </div>
             <div class="pure-u-1-3 dashboard-piece dashboard-piece-bluebg">
                 <div class="dashboard-content">
-                    <h2><i class="fontawesome-twitter"></i></h2>
-                    <p class="dashboard-metric">+20 followers<span class="light"><i class="fontawesome-angle-up"></i>6.8%</span></p>
+                    <form class="pure-form pure-form-aligned">
+                        <fieldset>
+                            <div class="pure-control-group">
+                                <label for="name">Country Name</label>
+                                <input id="name" type="text" placeholder="Username">
+                            </div>
+
+                            <div class="pure-controls">
+                                <button type="submit" class="pure-button pure-button-primary">Go</button>
+                            </div>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
             <div class="pure-u-1-3 dashboard-piece dashboard-piece-orangebg">
@@ -77,58 +87,6 @@
                 <div class="bar-vertical" style="height:70%;"></div>
             </div>
         </section>
-        <!--<section class="dashboard pure-g-r clearfix">
-            <div class="pure-u-2-3 dashboard-piece dashboard-piece-graybg dashboard-piece-events">
-                <div class="dashboard-content">
-                    <p class="dashboard-metric">
-                        <h2><i class="fontawesome-calendar"></i></h2>
-                        <h3>Upcoming Events</h3>
-                        <table class="pure-table pure-table-center pure-table-horizontal pure-table-dark">
-                            <thead>
-                                <tr>
-                                    <th>With:</th>
-                                    <th>Where:</th>
-                                    <th>When:</th>
-                                </tr>
-                            </thead>
-
-                            <tbody>
-                                <tr>
-                                    <td>John Smith</td>
-                                    <td>WDTuts Office</td>
-                                    <td>Jun 20, 9:30AM</td>
-                                </tr>
-
-                                <tr class="pure-table-odd">
-                                    <td>George Bluth</td>
-                                    <td>Sudden Valley</td>
-                                    <td>Jun 23, 4PM</td>
-                                </tr>
-
-                                <tr>
-                                    <td>Michael Scott</td>
-                                    <td>Scranton, PA</td>
-                                    <td>Jun 24, 2:45PM</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </p>
-                </div>
-            </div>
-            <div class="pure-u-1-3 dashboard-piece dashboard-piece-purplebg weather weather-rain">
-                <div class="dashboard-content">
-                    <p class="dashboard-metric">
-                        <h2><i class="fontawesome-umbrella"></i></h2>
-                        <div class="dashboard-metric">
-                            <strong>80% Chance</strong><br><small>of Precipitation</small>
-                            <div class="light bar-horizontal">
-                                <div class="bar-horizontal-bar" style="width:80%">80%</div>
-                            </div>
-                        </div>
-                    </p>
-                </div>
-            </div>
-        </section>-->
         <footer>
             Geosprocket, 2013 CC-by-SA
         </footer>
