--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             </div>
             <div class="pure-u-1-3 dashboard-piece dashboard-piece-bluebg">
                 <div class="dashboard-content">
+                    <h2>Enter a Country Name</h2>
                     <form class="pure-form pure-form-aligned">
                         <fieldset>
                             <div class="pure-control-group">
-                                <label for="name">Country Name</label>
                                 <input id="name" type="text" placeholder="Username">
                             </div>
 
