--- a/index.html
+++ b/index.html
@@ -1,109 +1,31 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Mapbox Vignette Example</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
+        <link href="http://netdna.bootstrapcdn.com/bootswatch/3.0.1/amelia/bootstrap.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="http://asset.geosprocket.com/img/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
-        <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=fontawesome">
-        <link href='//api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.css' rel='stylesheet' />
-          <!--[if lte IE 8]>
-            <link href='//api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.ie.css' rel='stylesheet'>
-          <![endif]-->
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-
-
-
-        <header>
-            <nav class="pure-menu pure-menu-open pure-menu-horizontal pure-menu-blackbg">
-                <a href="#" class="pure-menu-heading">Country Teaser Maps</a>
-                <ul>
-                    <!--<li class="pure-menu-selected"><a href="#">Dashboard</a></li>
-                    <li><a href="#">Users</a></li>
-                    <li><a href="#">Email</a></li>-->
-                    <li><a href="#">About</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section class="dashboard pure-g-r clearfix">
-            <div class="pure-u-1 dashboard-piece dashboard-piece-redbg dashboard-piece-logo">
-                <div id="map">
-                </div>
+        <div class="container">
+            
+            <div class="col-md-4">
+               <h2>Bhutan</h2>
+               <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=bhutan&mapid=examples.map-zr0njcqy&width=256&height=256"/>
             </div>
-            <div class="pure-u-1-3 dashboard-piece dashboard-piece-bluebg">
-                <div class="dashboard-content">
-                    <h2>Enter a Country Name</h2>
-                    <form class="pure-form pure-form-aligned">
-                        <fieldset>
-                            <div class="pure-control-group">
-                                <input id="name" type="text" placeholder="Username">
-                            </div>
-
-                            <div class="pure-controls">
-                                <button type="submit" class="pure-button pure-button-primary">Go</button>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
+            <div class="col-md-4">
+               <h2>Mexico</h2>
+               <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=mexico&mapid=examples.map-zr0njcqy&width=256&height=256"/>
             </div>
-            <div class="pure-u-1-3 dashboard-piece dashboard-piece-orangebg">
-                <div class="dashboard-content">
-                    <h2><i class="fontawesome-github"></i></h2>
-                    <p class="dashboard-metric">
-                        142 Commits
-                        <div class="light bar-horizontal">
-                            <div class="bar-horizontal-bar" style="width:57%">
-                                57% Capacity
-                            </div>
-                        </div>
-                    </p>
-                </div>
+            <div class="col-md-4">
+               <h2>Somalia</h2>
+               <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=somalia&mapid=examples.map-zr0njcqy&width=256&height=256"/>
             </div>
-            <div class="pure-u-1-3 dashboard-piece dashboard-piece-yellowbg">
-                <div class="dashboard-content">
-                    <p class="dashboard-metric">
-                        <h2><i class="fontawesome-check"></i></h2>
-                        <div class="dashboard-metric">
-                            <strong>63 / 90</strong><br><small>Tasks Complete</small>
-                        </div>
-                    </p>
-                </div>
-                <div class="bar-vertical" style="height:70%;"></div>
-            </div>
-        </section>
-        <footer>
-            Geosprocket, 2013 CC-by-SA
-        </footer>
-        
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-        <script src='//api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.js'></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-        <script>
-            var map = L.mapbox.map('map', 'landplanner.map-ywbxvf7j');
-
-            map.markerLayer.on('click', function(e) {
-                map.panTo(e.layer.getLatLng());
-            });
-        </script>
-
+        </div>
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     </body>
 </html>
