--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     </head>
     <body>
         <div class="container">
-            
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>Mapbox Vignettes</h1>
+                    <button href="https://github.com/wboykinm/static-countries" class="btn btn-lg btn-info">How they work</button>
             <div class="col-md-4">
                <h2>Bhutan</h2>
                <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=bhutan&mapid=examples.map-zr0njcqy&width=256&height=256"/>
