--- a/index.html
+++ b/index.html
@@ -19,17 +19,34 @@
             </div>
         </div>
         <div class="container">
-            <div class="col-md-4">
-               <h2>India</h2>
-               <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=india&mapid=examples.map-zr0njcqy&width=256&height=256" class="img-responsive img-thumbnail"/>
+            <div class="row">
+                <div class="col-md-4">
+                   <h2>India</h2>
+                   <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=india&mapid=examples.map-zr0njcqy&width=256&height=256" class="img-responsive img-thumbnail"/>
+                   <pre>http://dev.geosprocket.com/mapbox/vignette.php?name=india&mapid=examples.map-zr0njcqy&width=256&height=256</pre>
+                </div>
+                <div class="col-md-4">
+                   <h2>Mexico</h2>
+                   <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=mexico&mapid=examples.map-zr0njcqy&width=256&height=256" class="img-responsive img-thumbnail"/>
+                   <pre>http://dev.geosprocket.com/mapbox/vignette.php?name=mexico&mapid=examples.map-zr0njcqy&width=256&height=256</pre>
+                </div>
+                <div class="col-md-4">
+                   <h2>Somalia</h2>
+                   <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=somalia&mapid=examples.map-zr0njcqy&width=256&height=256" class="img-responsive img-thumbnail"/>
+                   <pre>http://dev.geosprocket.com/mapbox/vignette.php?name=somalia&mapid=examples.map-zr0njcqy&width=256&height=256</pre>
+                </div>
             </div>
-            <div class="col-md-4">
-               <h2>Mexico</h2>
-               <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=mexico&mapid=examples.map-zr0njcqy&width=256&height=256" class="img-responsive img-thumbnail"/>
-            </div>
-            <div class="col-md-4">
-               <h2>Somalia</h2>
-               <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=somalia&mapid=examples.map-zr0njcqy&width=256&height=256" class="img-responsive img-thumbnail"/>
+            <div class="row">
+                <div class="col-md-8">
+                   <h2>Nepal</h2>
+                   <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=nepal&mapid=examples.map-zr0njcqy&width=512&height=256" class="img-responsive img-thumbnail"/>
+                   <pre>http://dev.geosprocket.com/mapbox/vignette.php?name=nepal&mapid=examples.map-zr0njcqy&width=512&height=256</pre>
+                </div>
+                <div class="col-md-4">
+                   <h2>Argentina</h2>
+                   <img src="http://dev.geosprocket.com/mapbox/vignette.php?name=argentina&mapid=examples.map-zr0njcqy&width=256&height=512" class="img-responsive img-thumbnail"/>
+                   <pre>http://dev.geosprocket.com/mapbox/vignette.php?name=argentina&mapid=examples.map-zr0njcqy&width=256&height=512</pre>
+                </div>
             </div>
         </div>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
